@@ -11,7 +11,7 @@ importFrom("grDevices", "rgb")
 importFrom("stats", "cor.test")
 importFrom("utils", "flush.console", "object.size", "read.table")
 
-export("annotate","xsAnnotate","getPeaklist","getpspectra","annotateDiffreport")
+export("annotate","xsAnnotate","getPeaklist","getpspectra","annotateDiffreport","getIsotopeCluster")
 exportClasses("xsAnnotate")
 exportMethods("groupFWHM")
 exportMethods("findIsotopes")
